<resources>
	 <string name="app_name">MVI Architecture Design</string>
	 <!-- TODO: Remove or change this placeholder text -->
	 <string name="hello_blank_fragment">Hello blank fragment</string>
	 <string name="press_back_to_exit">Press Back to Exit</string>
	 <string name="dialog_please_waiting">Please Waiting</string>
	 <string name="try_again_later">Try again later</string>
	 <string name="no_internet_connection">No Internet Connection</string>
	 <string name="header">Mega Trust Jobs</string>
	 <string name="welcome_to_mega_trust_jobs">Welcome to Mega Trust Jobs</string>
	 <string name="get_started">Get Started</string>
	 <string name="name">Name</string>
	 <string name="dot"> :</string>
	 <string name="phone">Phone</string>
	 <string name="job_title">Job Title</string>
	 <string name="email">Email</string>
	 <string name="department_name">Department Name</string>
	 <string name="wish_list">Wish List</string>
	 <string name="data_not_respond">Data not respond</string>
	 <string name="jobs">Jobs</string>
	 <string name="info">Info</string>
	 <string name="wish_list_is_empty">Wish List is empty</string>
	 <string name="task_info">Task Info</string>
	 <string name="name_task">Name Task</string>
	 <string name="android_task_jobs_app">Android Task - Jobs app</string>
	 <string name="name_company">Name Company</string>
	 <string name="base_url">Base Url</string>
	 <string name="technologies">Technologies</string>
	 <string name="mega_trust">Mega Trust</string>
	 <string name="http_5_9_120_72_4321_api">http://5.9.120.72:4321/api/</string>
	 <string name="tech"><font fgcolor='#0d2b40'><b>Navigation Component</b></font>
		  , <font fgcolor='#0d2b40'><b>MVI</b></font>
		  , <font fgcolor='#0d2b40'><b>Livedata</b></font>
		  , <font fgcolor='#0d2b40'><b>Coroutines</b></font>
		  , <font fgcolor='#0d2b40'><b>Flow</b></font>
		  , <font fgcolor='#0d2b40'><b>Koin for DI</b></font>
		  , <font fgcolor='#0d2b40'><b>Room DB</b></font>
		  , <font fgcolor='#0d2b40'><b>Retrofit</b></font>
		  , <font fgcolor='#0d2b40'><b>Moshi for JSON</b></font>

	 </string>

</resources>