<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
	 xmlns:tools="http://schemas.android.com/tools"
	 xmlns:app="http://schemas.android.com/apk/res-auto">

	 <data>
		  <variable
			   name="fragment"
			   type="com.alialfayed.mviarchitecturedesign.feature.info.InfoFragment" />
	 </data>

	 <androidx.constraintlayout.widget.ConstraintLayout
		  android:layout_width="match_parent"
		  android:layout_height="match_parent"
		  android:background="@color/purple_500"
		  tools:context=".feature.wishList.InfoFragment">

		  <LinearLayout
			   android:id="@+id/linearLayout4"
			   android:layout_width="match_parent"
			   android:layout_height="wrap_content"
			   android:layout_marginStart="10dp"
			   android:layout_marginTop="10dp"
			   android:layout_marginEnd="10dp"
			   android:orientation="horizontal"
			   app:layout_constraintEnd_toEndOf="parent"
			   app:layout_constraintStart_toStartOf="parent"
			   app:layout_constraintTop_toTopOf="parent">


			   <ImageButton
					android:id="@+id/backArrow"
					android:layout_width="48dp"
					android:layout_height="48dp"
					android:background="@android:color/transparent"
					android:onClick="@{()-> fragment.finish()}"
					android:rotation="180"
					android:src="@drawable/ic_arrow_left"
					tools:ignore="ContentDescription,SpeakableTextPresentCheck" />

			   <TextView
					android:id="@+id/txtH1"
					style="@style/FontRegular"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:layout_gravity="center"
					android:layout_marginStart="10dp"
					android:text="@string/task_info"
					android:textColor="@color/white"
					android:textSize="@dimen/_15ssp" />


		  </LinearLayout>

		  <com.google.android.material.card.MaterialCardView
			   android:layout_width="match_parent"
			   android:layout_height="0dp"
			   android:layout_marginTop="10dp"
			   android:theme="@style/CustomCardViewStyle"
			   app:cardElevation="10dp"
			   app:cardMaxElevation="16dp"
			   app:layout_constraintBottom_toBottomOf="parent"
			   app:layout_constraintEnd_toEndOf="parent"
			   app:layout_constraintStart_toStartOf="parent"
			   app:layout_constraintTop_toBottomOf="@+id/linearLayout4">

			   <androidx.constraintlayout.widget.ConstraintLayout
					android:layout_width="match_parent"
					android:layout_height="match_parent">

					<LinearLayout
						 android:id="@+id/linearLayout3"
						 android:layout_width="wrap_content"
						 android:layout_height="wrap_content"
						 android:layout_gravity="center|start"
						 android:layout_marginStart="5dp"
						 android:layout_marginTop="10dp"
						 android:orientation="horizontal"
						 android:padding="2dp"
						 app:layout_constraintStart_toStartOf="parent"
						 app:layout_constraintTop_toTopOf="parent">

						 <TextView
							  style="@style/FontMedium"
							  android:layout_width="match_parent"
							  android:layout_height="wrap_content"
							  android:layout_gravity="center"
							  android:text="@string/name_task"
							  android:textColor="@color/purple_500"
							  android:textSize="@dimen/_11ssp" />

						 <TextView
							  style="@style/FontMedium"
							  android:layout_width="match_parent"
							  android:layout_height="wrap_content"
							  android:layout_gravity="center"
							  android:text="@string/dot"
							  android:textColor="@color/purple_500"
							  android:textSize="@dimen/_11ssp" />

						 <TextView
							  style="@style/FontRegular"
							  android:layout_width="match_parent"
							  android:layout_height="wrap_content"
							  android:layout_gravity="center"
							  android:layout_marginStart="@dimen/_5sdp"
							  android:singleLine="true"
							  android:textSize="@dimen/_11ssp"
							  android:text="@string/android_task_jobs_app" />

					</LinearLayout>

					<LinearLayout
						 android:id="@+id/linearLayout41"
						 android:layout_width="wrap_content"
						 android:layout_height="wrap_content"
						 android:layout_gravity="center|start"
						 android:layout_marginStart="5dp"
						 android:layout_marginTop="5dp"
						 android:orientation="horizontal"
						 android:padding="2dp"
						 app:layout_constraintStart_toStartOf="parent"
						 app:layout_constraintTop_toBottomOf="@+id/linearLayout3">

						 <TextView
							  style="@style/FontMedium"
							  android:layout_width="match_parent"
							  android:layout_height="wrap_content"
							  android:layout_gravity="center"
							  android:text="@string/name_company"
							  android:textColor="@color/purple_500"
							  android:textSize="@dimen/_11ssp" />

						 <TextView
							  style="@style/FontMedium"
							  android:layout_width="match_parent"
							  android:layout_height="wrap_content"
							  android:layout_gravity="center"
							  android:text="@string/dot"
							  android:textColor="@color/purple_500"
							  android:textSize="@dimen/_11ssp" />

						 <TextView
							  style="@style/FontRegular"
							  android:layout_width="match_parent"
							  android:layout_height="wrap_content"
							  android:layout_gravity="center"
							  android:layout_marginStart="@dimen/_5sdp"
							  android:singleLine="true"
							  android:text="@string/mega_trust"
							  android:textSize="@dimen/_11ssp" />

					</LinearLayout>

					<LinearLayout
						 android:id="@+id/linearLayout410"
						 android:layout_width="wrap_content"
						 android:layout_height="wrap_content"
						 android:layout_gravity="center|start"
						 android:layout_marginStart="5dp"
						 android:layout_marginTop="5dp"
						 android:orientation="horizontal"
						 android:padding="2dp"
						 app:layout_constraintStart_toStartOf="parent"
						 app:layout_constraintTop_toBottomOf="@+id/linearLayout41">

						 <TextView
							  style="@style/FontMedium"
							  android:layout_width="match_parent"
							  android:layout_height="wrap_content"
							  android:layout_gravity="center"
							  android:text="@string/base_url"
							  android:textColor="@color/purple_500"
							  android:textSize="@dimen/_11ssp" />

						 <TextView
							  style="@style/FontMedium"
							  android:layout_width="match_parent"
							  android:layout_height="wrap_content"
							  android:layout_gravity="center"
							  android:text="@string/dot"
							  android:textColor="@color/purple_500"
							  android:textSize="@dimen/_11ssp" />

						 <TextView
							  style="@style/FontRegular"
							  android:layout_width="match_parent"
							  android:layout_height="wrap_content"
							  android:layout_gravity="center"
							  android:layout_marginStart="@dimen/_5sdp"
							  android:singleLine="true"
							  android:text="@string/http_5_9_120_72_4321_api"
							  android:textSize="@dimen/_11ssp" />

					</LinearLayout>

					<LinearLayout
						 android:id="@+id/linearLayout41a0"
						 android:layout_width="wrap_content"
						 android:layout_height="wrap_content"
						 android:layout_gravity="center|start"
						 android:layout_marginStart="5dp"
						 android:layout_marginTop="5dp"
						 android:orientation="horizontal"
						 android:padding="2dp"
						 app:layout_constraintStart_toStartOf="parent"
						 app:layout_constraintTop_toBottomOf="@+id/linearLayout410">

						 <TextView
							  style="@style/FontMedium"
							  android:layout_width="match_parent"
							  android:layout_height="wrap_content"
							  android:text="@string/technologies"
							  android:textColor="@color/purple_500"
							  android:textSize="@dimen/_11ssp" />

						 <TextView
							  style="@style/FontMedium"
							  android:layout_width="match_parent"
							  android:layout_height="wrap_content"
							  android:text="@string/dot"
							  android:textColor="@color/purple_500"
							  android:textSize="@dimen/_11ssp" />

						 <TextView
							  style="@style/FontRegular"
							  android:layout_width="match_parent"
							  android:layout_height="wrap_content"
							  android:layout_gravity="center"
							  android:layout_marginStart="@dimen/_5sdp"
							  android:text="@string/tech"
							  android:textSize="@dimen/_11ssp" />

					</LinearLayout>


					<ImageView
						 android:id="@+id/imageView"
						 android:layout_width="wrap_content"
						 android:layout_height="wrap_content"
						 android:layout_marginTop="20dp"
						 android:src="@drawable/logo"
						 app:layout_constraintEnd_toEndOf="parent"
						 app:layout_constraintStart_toStartOf="parent"
						 app:layout_constraintTop_toBottomOf="@+id/linearLayout41a0"
						 tools:ignore="ContentDescription" />


			   </androidx.constraintlayout.widget.ConstraintLayout>



		  </com.google.android.material.card.MaterialCardView>

	 </androidx.constraintlayout.widget.ConstraintLayout>

</layout>